--- a/spouse.html
+++ b/spouse.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Spouse Finding</title>
-        <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Spouse Finding</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrap.com/bootstrap/4.5.2/css/bootstrap.min.css">
+</head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/business.html">Business Listings</a></li>
-            <li><a href="/jobs.html">Job Finding</a></li>
-            <li><a href="/spouse.html">Spouse Finding</a></li>
-            <li><a href="/job-seeker.html">Job Seeker</a></li>
-            <li><a href="/job-provider.html">Job Provider</a></li>
-            <li><a href="/submit-listing.html">Submit Listing</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="/">Website</a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="business.html">Business Listings</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="jobs.html">Job Finding</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="spouse.html">Spouse Finding</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="submit-listing.html">Submit Listing</a>
+                </li>
+            </ul>
+        </div>
     </nav>
-    
-    <div id="content">
-        <h1>Spouse Finding</h1>
-    </div>
+    <!-- Page content goes here -->
 </body>
 </html>
