--- a/submit-listing.html
+++ b/submit-listing.html
@@ -1,52 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<!DOCTYPE html>
-<html lang="en">
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Submit Listing</title>
-        <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    </head>
-    <body>
-        <!-- Existing body content -->
-    </body>
-    </html>
-    
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Submit Listing</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrap.com/bootstrap/4.5.2/css/bootstrap.min.css">
+</head>
 <body>
-    <!-- Existing body content -->
-</body>
-</html>
->
-<body>
-    <nav>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/business.html">Business Listings</a></li>
-            <li><a href="/jobs.html">Job Finding</a></li>
-            <li><a href="/spouse.html">Spouse Finding</a></li>
-            <li><a href="/submit-listing.html">Submit Listing</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="/">Website</a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="business.html">Business Listings</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="jobs.html">Job Finding</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="spouse.html">Spouse Finding</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="submit-listing.html">Submit Listing</a>
+                </li>
+            </ul>
+        </div>
     </nav>
-    <div id="content">
+    <div class="container mt-4">
         <h1>Submit Your Listing</h1>
         <form id="listingForm">
-            <label for="title">Title:</label>
-            <input type="text" id="title" name="title" required>
-            <br>
-            <label for="description">Description:</label>
-            <textarea id="description" name="description" required></textarea>
-            <br>
-            <button type="submit">Submit</button>
+            <div class="form-group">
+                <label for="title">Title:</label>
+                <input type="text" class="form-control" id="title" name="title" required>
+            </div>
+            <div class="form-group">
+                <label for="description">Description:</label>
+                <textarea class="form-control" id="description" name="description" required></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
         </form>
-        <div id="listings">
+        <div id="listings" class="mt-4">
             <h2>Listings</h2>
-            <ul id="listingsList"></ul>
+            <ul id="listingsList" class="list-group"></ul>
         </div>
     </div>
     <script src="scripts.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrap.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
