Fix navigation links and add page content

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             </ul>
         </div>
     </nav>
-    <!-- Page content goes here -->
+    <div class="container mt-4">
+        <h1>Welcome to the Main Website</h1>
+        <p>This is the home page content.</p>
+    </div>
 </body>
 </html>
