--- a/spouse.html
+++ b/spouse.html
@@ -30,6 +30,9 @@
             </ul>
         </div>
     </nav>
-    <!-- Page content goes here -->
+    <div class="container mt-4">
+        <h1>Spouse Finding</h1>
+        <p>This is the spouse finding page content.</p>
+    </div>
 </body>
 </html>
