--- a/submit-listing.html
+++ b/submit-listing.html
@@ -29,28 +29,4 @@
                 </li>
             </ul>
         </div>
-    </nav>
-    <div class="container mt-4">
-        <h1>Submit Your Listing</h1>
-        <form id="listingForm">
-            <div class="form-group">
-                <label for="title">Title:</label>
-                <input type="text" class="form-control" id="title" name="title" required>
-            </div>
-            <div class="form-group">
-                <label for="description">Description:</label>
-                <textarea class="form-control" id="description" name="description" required></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-        <div id="listings" class="mt-4">
-            <h2>Listings</h2>
-            <ul id="listingsList" class="list-group"></ul>
-        </div>
-    </div>
-    <script src="scripts.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrap.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-</html>
+    </nav
