--- a/business.html
+++ b/business.html
@@ -30,6 +30,9 @@
             </ul>
         </div>
     </nav>
-    <!-- Page content goes here -->
+    <div class="container mt-4">
+        <h1>Business Listings</h1>
+        <p>This is the business listings page content.</p>
+    </div>
 </body>
 </html>
